# cs2050project

./: CODEX.md  CODEX.original.md  PROJECT_SCOPE.md  README.md  algorithms.md  context.md
benchmark/: bench_100.xyz  bench_1000.xyz  bench_10000.xyz  bench_100000.xyz  bench_16000.xyz  bench_2000.xyz  bench_32000.xyz  bench_4000.xyz  bench_8000.xyz  benchmark.xyz  generate_benchmark_frame.py  generate_benchmark_series.sh  plotting.md  submit_all_benchmarks.sh
benchmark/plotting/: plot_cross_method_problem_size.py  plot_single_csv.py
cuda/: CMakeLists.txt
cuda/slurm/: benchmark.sh  validation.sh
cuda/src/: edge_list.h  frame.cpp  frame.h  main.cu  neighbor.cu  neighbor.h  timing.h
julia/: README.md
julia/results/: julia_strong.csv  julia_weak.csv
julia/slurm/: benchmark_strong.sh  benchmark_weak.sh  dev.sh  validation.sh
julia/src/: main.jl
mpi/: CMakeLists.txt
mpi/results/: mpi_strong.csv
mpi/slurm/: benchmark_strong.sh  benchmark_weak.sh  dev.sh  validation.sh
mpi/src/: edge_list.h  frame.h  main.cpp  timing.h
openmp/: CMakeLists.txt
openmp/results/: openmp_strong.csv  openmp_weak.csv
openmp/slurm/: benchmark.sh  benchmark_strong.sh  benchmark_weak.sh  run_openmp_threads.sh  validation.sh
openmp/src/: frame.cpp  frame.h  main.cpp  timing.h
report/: report.md
serial/: CMakeLists.txt  README.md
serial/results/: serial_scaling.csv
serial/slurm/: benchmark.sh  validate.sh
serial/src/: edge_list.h  frame.cpp  frame.h  main.cpp  timing.h
serial/tests/: generate_sample_frame.py  sample_frame.csv
validation/: check_edges.py  generate_reference_validation.py  validate_all.sh  validation_actual_edges.csv  validation_expected_edges.csv  validation_frame.xyz
